force-app/main/default/objects/Implementation_Issue__c/Implementation_Issue__c.object-meta.xml
<CustomObject>
<label
  >Implementation Issue</label><pluralLabel>Implementation Issues</pluralLabel>
    <nameField><displayFormat>IIS-{00000000}</displayFormat><label
    >Issue Number</label><type>AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities><enableHistory
  >true</enableHistory>
</CustomObject>