force-app/main/default/objects/Implementation_Issue__c/fields/Commercial_Impact__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Impact</label>
    <type>Checkbox</type>
</CustomField>