force-app/main/default/objects/Implementation_Issue__c/fields/Customer_Impact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Impact</label>
    <type>Checkbox</type>
</CustomField>