force-app/main/default/objects/Implementation_Issue__c/fields/Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Level__c</fullName>
    <label>Escalation Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>