force-app/main/default/objects/Implementation_Issue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Scope</fullName><default>true</default><label
        >Scope</label></value>
            <value><fullName>Data Quality</fullName><default
        >false</default><label>Data Quality</label></value>
            <value><fullName>Integration</fullName><default
        >false</default><label>Integration</label></value>
            <value><fullName>Resourcing</fullName><default>false</default><label
        >Resourcing</label></value>
            <value><fullName>Customer Responsiveness</fullName><default
        >false</default><label>Customer Responsiveness</label></value>
            <value><fullName>Technical Defect</fullName><default
        >false</default><label>Technical Defect</label></value>
            <value><fullName>Commercial</fullName><default>false</default><label
        >Commercial</label></value>
            <value><fullName>Timeline</fullName><default>false</default><label
        >Timeline</label></value>
            <value><fullName>Quality</fullName><default>false</default><label
        >Quality</label></value>
            <value><fullName>Training Gap</fullName><default
        >false</default><label>Training Gap</label></value>
            <value><fullName>Third Party Dependency</fullName><default
        >false</default><label>Third Party Dependency</label></value>
            <value><fullName>Compliance</fullName><default>false</default><label
        >Compliance</label></value>
            <value><fullName>Other</fullName><default>false</default><label
        >Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>