force-app/main/default/objects/Implementation_Issue__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <type>Lookup</type>
    <referenceTo>Implementation_Milestone__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>