force-app/main/default/objects/Implementation_Issue__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned Issues</relationshipLabel>
    <relationshipName>Owned_Issues</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>