force-app/main/default/objects/Implementation_Issue__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <label>Raised By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Raised Issues</relationshipLabel>
    <relationshipName>Raised_Issues</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>