force-app/main/default/objects/Implementation_Issue__c/fields/Raised_On__c.field-meta.xml
<CustomField>
    <fullName>Raised_On__c</fullName>
    <label>Raised On</label>
    <type>DateTime</type>
</CustomField>