force-app/main/default/objects/Implementation_Issue__c/fields/Target_Resolution_On__c.field-meta.xml
<CustomField>
    <fullName>Target_Resolution_On__c</fullName>
    <label>Target Resolution On</label>
    <type>Date</type>
</CustomField>